force-app/main/default/objects/Danger_Assessment__c/Danger_Assessment__c.object-meta.xml
<CustomObject>
    <description>Campbell Danger Assessment (DA-20) record. ADR-008 selected the DA-20 instrument and ADR (today) selected a custom object over extending caseman__Assessment__c. Each record is one administration of the 20-question assessment to a survivor at a point in time.</description>
    <label>Danger Assessment</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Danger Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>