force-app/main/default/objects/Danger_Assessment__c/fields/Assessment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Assessment_DateTime__c</fullName>
    <description>When the assessment was administered. Required. Used for trend analysis when a survivor has multiple assessments over time.</description>
    <label>Assessment Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>