force-app/main/default/objects/Danger_Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advocate who administered the assessment. Field is technically optional (Salesforce restriction on User lookups); a Day 3 record-triggered flow will auto-populate with the current user.</description>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Danger Assessments Administered</relationshipLabel>
    <relationshipName>Danger_Assessments_Administered</relationshipName>
    <type>Lookup</type>
</CustomField>