force-app/main/default/objects/Danger_Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survivor being assessed. Required. Restrict-delete to preserve clinical audit trail.</description>
    <label>Survivor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Danger Assessments</relationshipLabel>
    <relationshipName>Danger_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>