force-app/main/default/objects/Danger_Assessment__c/fields/Danger_Tier__c.field-meta.xml
<CustomField>
    <fullName>Danger_Tier__c</fullName>
    <description>Campbell DA-20 risk tier based on Total_Score. Published thresholds (per ADR-008): 0-7 Variable, 8-13 Increased, 14-17 Severe, 18+ Extreme.</description>
    <formula>IF(Total_Score__c &gt;= 18, "Extreme Danger",
  IF(Total_Score__c &gt;= 14, "Severe Danger",
    IF(Total_Score__c &gt;= 8, "Increased Danger",
      "Variable Danger")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Danger Tier</label>
    <type>Text</type>
</CustomField>