force-app/main/default/objects/Danger_Assessment__c/fields/Hotline_Call__c.field-meta.xml
<CustomField>
    <fullName>Hotline_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to a Hotline Call this assessment was triggered by.</description>
    <label>Hotline Call</label>
    <referenceTo>Hotline_Call__c</referenceTo>
    <relationshipLabel>Danger Assessments</relationshipLabel>
    <relationshipName>Danger_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>