force-app/main/default/objects/Danger_Assessment__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to the Intake this assessment was performed during.</description>
    <label>Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Danger Assessments</relationshipLabel>
    <relationshipName>Danger_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>