force-app/main/default/objects/Danger_Assessment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Clinical notes from the assessment. Use this for Q5 weapon-type details, Q13 control-attempt details, and any context the advocate wants to capture beyond the 20 scored questions.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>