force-app/main/default/objects/Danger_Assessment__c/fields/Q01_Violence_Increased__c.field-meta.xml
<CustomField>
    <fullName>Q01_Violence_Increased__c</fullName>
    <description>Original Campbell wording: "Has the physical violence increased in severity or frequency over the past year?"</description>
    <label>Q01: Violence Increased in Past Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>