force-app/main/default/objects/Danger_Assessment__c/fields/Q02_Owns_Gun__c.field-meta.xml
<CustomField>
    <fullName>Q02_Owns_Gun__c</fullName>
    <description>Original Campbell wording: "Does he own a gun?" Gender-neutral framing: "Does the partner own a gun?"</description>
    <label>Q02: Partner Owns a Gun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>