force-app/main/default/objects/Danger_Assessment__c/fields/Q03_You_Left__c.field-meta.xml
<CustomField>
    <fullName>Q03_You_Left__c</fullName>
    <description>Original Campbell wording: "Have you left him after living together during the past year?" Gender-neutral: "Have you left the partner after living together during the past year?"</description>
    <label>Q03: You Left in Past Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>