force-app/main/default/objects/Danger_Assessment__c/fields/Q04_Unemployed__c.field-meta.xml
<CustomField>
    <fullName>Q04_Unemployed__c</fullName>
    <description>Original Campbell wording: "Is he unemployed?" Gender-neutral: "Is the partner unemployed?"</description>
    <label>Q04: Partner is Unemployed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>