force-app/main/default/objects/Danger_Assessment__c/fields/Q05_Weapon_Threatened__c.field-meta.xml
<CustomField>
    <fullName>Q05_Weapon_Threatened__c</fullName>
    <description>Original Campbell wording: "Has he ever used a weapon against you or threatened you with a lethal weapon? (If yes, was the weapon a gun?)" The sub-question about weapon type is captured in Notes.</description>
    <label>Q05: Used or Threatened with Weapon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>