force-app/main/default/objects/Danger_Assessment__c/fields/Q06_Threatens_To_Kill__c.field-meta.xml
<CustomField>
    <fullName>Q06_Threatens_To_Kill__c</fullName>
    <description>Original Campbell wording: "Does he threaten to kill you?" Gender-neutral: "Does the partner threaten to kill you?"</description>
    <label>Q06: Threatens to Kill You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>