force-app/main/default/objects/Danger_Assessment__c/fields/Q07_Avoided_Arrest__c.field-meta.xml
<CustomField>
    <fullName>Q07_Avoided_Arrest__c</fullName>
    <description>Original Campbell wording: "Has he avoided being arrested for domestic violence?"</description>
    <label>Q07: Avoided Arrest for DV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>