force-app/main/default/objects/Danger_Assessment__c/fields/Q08_Child_Not_Partners__c.field-meta.xml
<CustomField>
    <fullName>Q08_Child_Not_Partners__c</fullName>
    <description>Original Campbell wording: "Do you have a child that is not his?"</description>
    <label>Q08: Have Child Not Partner's</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>