force-app/main/default/objects/Danger_Assessment__c/fields/Q09_Forced_Sex__c.field-meta.xml
<CustomField>
    <fullName>Q09_Forced_Sex__c</fullName>
    <description>Original Campbell wording: "Has he ever forced you to have sex when you did not wish to do so?"</description>
    <label>Q09: Forced You to Have Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>