force-app/main/default/objects/Danger_Assessment__c/fields/Q10_Strangled__c.field-meta.xml
<CustomField>
    <fullName>Q10_Strangled__c</fullName>
    <description>Original Campbell wording: "Does he ever try to choke (strangle) you or cut off your breathing?" Strangulation is one of the strongest predictors of intimate-partner homicide.</description>
    <label>Q10: Strangled / Choked You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>