force-app/main/default/objects/Danger_Assessment__c/fields/Q11_Illegal_Drugs__c.field-meta.xml
<CustomField>
    <fullName>Q11_Illegal_Drugs__c</fullName>
    <description>Original Campbell wording: "Does he use illegal drugs? By drugs, I mean 'uppers' or amphetamines, 'meth', speed, angel dust, cocaine, 'crack', street drugs, or mixtures."</description>
    <label>Q11: Uses Illegal Drugs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>