force-app/main/default/objects/Danger_Assessment__c/fields/Q12_Alcoholic__c.field-meta.xml
<CustomField>
    <fullName>Q12_Alcoholic__c</fullName>
    <description>Original Campbell wording: "Is he an alcoholic or problem drinker?"</description>
    <label>Q12: Alcoholic or Problem Drinker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>