force-app/main/default/objects/Danger_Assessment__c/fields/Q13_Controls_Daily__c.field-meta.xml
<CustomField>
    <fullName>Q13_Controls_Daily__c</fullName>
    <description>Original Campbell wording: "Does he control most or all of your daily activities? For instance: does he tell you who you can be friends with, when you can see your family, how much money you can use, or when you can take the car? (If he tries, but you do not let him, check here ___)" The "tries but you don't let him" sub-question is captured in Notes.</description>
    <label>Q13: Controls Your Daily Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>