force-app/main/default/objects/Danger_Assessment__c/fields/Q14_Jealous__c.field-meta.xml
<CustomField>
    <fullName>Q14_Jealous__c</fullName>
    <description>Original Campbell wording: "Is he violently and constantly jealous of you? (For instance, does he say 'If I can't have you, no one can.')"</description>
    <label>Q14: Violently/Constantly Jealous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>