force-app/main/default/objects/Danger_Assessment__c/fields/Q15_Beaten_Pregnant__c.field-meta.xml
<CustomField>
    <fullName>Q15_Beaten_Pregnant__c</fullName>
    <description>Original Campbell wording: "Have you ever been beaten by him while you were pregnant?" Answer N/A if survivor has not been pregnant; use Declined option for that case.</description>
    <label>Q15: Beaten While Pregnant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>N/A</fullName><default>false</default><label>N/A — Never Pregnant</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>