force-app/main/default/objects/Danger_Assessment__c/fields/Q16_Partner_Suicide__c.field-meta.xml
<CustomField>
    <fullName>Q16_Partner_Suicide__c</fullName>
    <description>Original Campbell wording: "Has he ever threatened or tried to commit suicide?"</description>
    <label>Q16: Partner Suicide Attempt/Threat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>