force-app/main/default/objects/Danger_Assessment__c/fields/Q17_Threatens_Children__c.field-meta.xml
<CustomField>
    <fullName>Q17_Threatens_Children__c</fullName>
    <description>Original Campbell wording: "Does he threaten to harm your children?"</description>
    <label>Q17: Threatens to Harm Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>N/A</fullName><default>false</default><label>N/A — No Children</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>