force-app/main/default/objects/Danger_Assessment__c/fields/Q18_Capable_Of_Killing__c.field-meta.xml
<CustomField>
    <fullName>Q18_Capable_Of_Killing__c</fullName>
    <description>Original Campbell wording: "Do you believe he is capable of killing you?" Self-perception of lethality is a strong independent predictor.</description>
    <label>Q18: Partner Capable of Killing You</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown / Unsure</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>