force-app/main/default/objects/Danger_Assessment__c/fields/Q19_Stalking__c.field-meta.xml
<CustomField>
    <fullName>Q19_Stalking__c</fullName>
    <description>Original Campbell wording: "Does he follow or spy on you, leave threatening notes or messages, destroy your property, or call you when you don't want him to?"</description>
    <label>Q19: Stalking / Threatening Behaviors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>