force-app/main/default/objects/Danger_Assessment__c/fields/Q20_Your_Suicide__c.field-meta.xml
<CustomField>
    <fullName>Q20_Your_Suicide__c</fullName>
    <description>Original Campbell wording: "Have you ever threatened or tried to commit suicide?" Note: this is asked about the survivor, NOT the partner. If Yes, the advocate should immediately conduct a suicide-safety assessment.</description>
    <label>Q20: You Threatened/Attempted Suicide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined to Answer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>