force-app/main/default/objects/Danger_Assessment__c/listViews/Assessments_This_Month.listView-meta.xml
<ListView>
    <fullName>Assessments_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Assessment_DateTime__c</columns>
    <columns>Total_Score__c</columns>
    <columns>Danger_Tier__c</columns>
    <columns>Assessor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assessment_DateTime__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Assessments This Month</label>
</ListView>